--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       }
     </style>
     <div id="app">
-      <div id="ui"></div>
+      <div id="ui"">
+        <p class="note">Tap/Click around to move</p>
+        <div id="">
+
+        </div>
+      </div>
       <canvas id="game"></canvas>
     </div>
     <script type="module" src="src/main.js"></script>
