--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <div id="app">
       <div id="ui"">
         <p class="note">Tap/Click around to move</p>
-        <div id="">
+        <div id="textbox-container" style="display: none">
+          <div class="textbox">
+            <p id="dialogue" class="ui-text"></p>
+              <div class="btn-container">
+                <button id="close" class="ui-close-btn">Close</button>
+              </div>
+          </div>
 
         </div>
       </div>
